更替网站统计代码提供者。

--- a/index.html
+++ b/index.html
@@ -39,16 +39,8 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="/style/style.min.css?202306">
-	<!-- <link rel="stylesheet" href="/style/magazine.css"> -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204367285-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-		gtag('config', 'UA-204367285-1');
-	</script>
+	<link rel="stylesheet" href="/style/style.min.css?202308">
+	<script async src="https://analytics.knowsex.net/script.js" data-website-id="74452ede-6372-4bf7-9f03-b9ecbe2f7978"></script>
 	<!-- <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/pangu/4.0.7/pangu.min.js" type="application/javascript"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', () => {
@@ -182,7 +174,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-07-21</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-01</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -407,7 +399,7 @@
 		<!-- Darkmode.js -->
 		<!-- <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/Darkmode.js/1.5.7/darkmode-js.min.js" type="application/javascript"></script> -->
 
-
+		<script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.1/dist/cookieconsent.js"></script>
 		<script>
 			// Dark mode requires
 			function chooseMode(mode) {
