发布隐私政策和使用条款。

--- a/general/about/index.html
+++ b/general/about/index.html
@@ -200,7 +200,7 @@
 		</div>
 	</nav>
 
-					<article itemscope itemtype="http://schema.org/Article">
+			<article itemscope itemtype="http://schema.org/Article">
 			<div class="header-thumb">
 				<div class="header-img about-bg"></div>
 				<div class="header-cover">
@@ -243,7 +243,14 @@
 		</article>
 		<div>
 			<p class="px-4 text-center text-muted">
-				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。</p>
+				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。
+			</p>
+				<ul class="list-inline link-underline px-4 text-center text-muted">
+					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
+					<li class="list-inline-item"><a href="/general/privacy-policy">隐私政策</a></li>
+					<li class="list-inline-item"><a href="/general/terms-of-use">使用条款</a></li>
+					<li class="list-inline-item"><a href="/general/about">关于</a></li>
+				</ul>
 		</div>
 
 		<footer class="row footer">
@@ -251,11 +258,7 @@
 				<p class="key">
 					望藉此减少一些社会问题的发生。
 				</p>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-					<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
-					<li class="list-inline-item"><a href="/general/about">关于</a></li>
-				</ul>
+				<p>请考虑<a href="/general/encourage/">支持我们的运作</a>。</p>
 				<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex
 				</p>
 							</div>
