--- a/general/communicate/index.html
+++ b/general/communicate/index.html
@@ -159,7 +159,7 @@
 		</div>
 	</nav>
 
-					<article itemscope itemtype="http://schema.org/Article">
+			<article itemscope itemtype="http://schema.org/Article">
 			<div class="header-thumb">
 				<div class="header-img communicate"></div>
 				<div class="header-cover">
@@ -183,6 +183,9 @@
     <p>如果你有自己的疑惑、焦虑希望得到我们的帮助，或者希望和我们合作，欢迎通过下面的方式来联系我们。</p>
     <p>您可以选择公开提问的内容，以帮助其他有疑虑的人。我们将对可能与您产生联系的信息抹去。</p>
     <p>请注意，回信者的观点并不代表 KnowSex 官方的观点。</p>
+    <div class="tip">
+        <p><strong style="color: inherit;">联系我们之前，请阅读 KnowSex 的<a href="/general/privacy-policy">隐私政策</a>和<a href="/general/terms-of-use">使用条款</a>，并确保你同意这些内容。</strong></p>    
+    </div>
      <h2>电子邮件</h2>
         <p>
             <a href="mailto:knowsex@outlook.com" style="text-decoration: underline; font-weight: 700; font-size: 1.2em; color:#5dbd90;">
@@ -260,7 +263,14 @@
 		</article>
 		<div>
 			<p class="px-4 text-center text-muted">
-				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。</p>
+				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。
+			</p>
+				<ul class="list-inline link-underline px-4 text-center text-muted">
+					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
+					<li class="list-inline-item"><a href="/general/privacy-policy">隐私政策</a></li>
+					<li class="list-inline-item"><a href="/general/terms-of-use">使用条款</a></li>
+					<li class="list-inline-item"><a href="/general/about">关于</a></li>
+				</ul>
 		</div>
 
 		<footer class="row footer">
@@ -268,11 +278,7 @@
 				<p class="key">
 					望藉此减少一些社会问题的发生。
 				</p>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-					<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
-					<li class="list-inline-item"><a href="/general/about">关于</a></li>
-				</ul>
+				<p>请考虑<a href="/general/encourage/">支持我们的运作</a>。</p>
 				<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex
 				</p>
 							</div>
