--- a/general/terms-of-use/index.html
+++ b/general/terms-of-use/index.html
@@ -5,12 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,KnowSex,">
-	<meta name="description" content="KnowSex 的扩展阅读部分。">
+	<meta name="keywords" content="使用条款,性教育,KnowSex,">
+	<meta name="description" content="站点使用条款">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="扩展阅读" />
-	<meta property="og:description" content="KnowSex 的扩展阅读部分。" />
+	<meta property="og:title" content="使用条款" />
+	<meta property="og:description" content="站点使用条款" />
 	<meta property="og:locale" content="zh_CN" />
 	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>扩展阅读 - KnowSex</title>
+	<title>使用条款 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -49,7 +49,11 @@
 	</script> -->
 
 	<style>
-					</style>
+		
+.terms-bg {
+    background: #fff;
+}
+	</style>
 </head>
 
 <body>
@@ -159,57 +163,73 @@
 		</div>
 	</nav>
 
-			<article itemscope itemtype="http://schema.org/Article">
-			<div class="header-thumb">
-				<div class="header-img ex-rd"></div>
-				<div class="header-cover">
-					<div class="header-title">
-						<h1 itemprop="headline">扩展阅读</h1>
-						<p>Extended Reading</p>
-					</div>
-				</div>
-			</div>
-			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-						<br>
-		<p>在了解了人类生殖系统、性行为和性取向后，可根据您的需要来学习下方已撰写的扩展内容。</p>
-		<br>
-		<div class="header-thumb">
-			<a href="contraception-and-prevention-of-STD.html">
-				<div class="header-img contraceptive"></div>
-				<div class="header-cover">
-					<div class="header-title">
-						<h1>避孕与预防性传播疾病</h1>
-						<p>Contraceptive And Prevention of STD</p>
-					</div>
-				</div>
-			</a>
-		</div>
-		<p>更多内容会按需编写，若您有需要，可在页面底部找到可联系到我们的联系方式。</p>
+				<h1>KnowSex 使用条款</h1>
+<p>更新日期：2023 年 8 月 2 日</p>
+<p>生效日期：2023 年 8 月 3 日</p>
+<h2>范围</h2>
+<p>KnowSex 使用条款（以下简称“本条款”）适用于 KnowSex（以下简称“我们”）的如下站点（以下简称“本网站”）：</p>
+<ul>
+<li>主站点主域名：<code>knowsex.net</code> 及 <code>www.knowsex.net</code>；</li>
+<li>主站点备用域名：<code>github.knowsex.net</code>；</li>
+<li>主站点备用域名：<code>knowsex.vercel.app</code>；</li>
+<li>博客站点域名：<code>post.knowsex.net</code>；</li>
+<li>站点统计域名：<code>analytics.knowsex.net</code>。</li>
+</ul>
+<h2>对条款的同意</h2>
+<p>您在使用本网站时，即表示您同意遵守本条款。如果您不同意本条款，请勿使用本网站。</p>
+<p>我们有权利随时自行决定增加、删除、更改、修改本条款的内容，你有责任定期检查本条款以了解更改。如果你在更改后继续使用本网站，则表示你同意遵守更改后的条款。</p>
+<h2>免责声明</h2>
+<p><strong>本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。</strong></p>
+<p>我们不承诺网站内容无任何错误，不承诺网站服务不会中断，不承诺网站内容不会被篡改。我们没有暗示或明示网站的内容准确无误。</p>
+<p><strong>我们不承担任何因使用本网站而产生的直接或间接的责任。</strong></p>
+<p>在你使用本网站连接到的第三方服务时，你应知晓使用这些服务产生的一切后果与本网站无关。</p>
+<p><strong>当你通过联系本网站获得本网站的成员为你提供的资讯时，你应知晓我们提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</strong></p>
+<p>回信者可能会出于你的情况对你做出特定性的回复，对于你提出的任何问题，回信者的观点并不代表我们的观点。</p>
+<h2>内容版权</h2>
+<p>对于本网站内容的版权，请参阅本站版权许可：</p>
+<blockquote>
+<p>https://knowsex.net/general/copyright/</p>
+</blockquote>
+<p>本网站的一部分内容版权不属于本站，这些内容的版权信息均有在引用页面根据原版权信息进行标识。</p>
+<p>如果你欲对本网站内容进行复制、重新发布、上传、发布、公开展示、编码、翻译、传输分发到其他设备或媒介，请你确认遵守上述版权许可。</p>
+<h2>内容使用限制</h2>
+<p>除版权许可外，你不得以以下目的使用本网站内容：</p>
+<ul>
+<li>贬低、损毁性教育；</li>
+<li>用于违反社会公序良俗的活动；</li>
+<li>用于服务、产品、出版、发行的主要内容。</li>
+</ul>
+<p>下面是一些并不全面的例子，帮助你理解我们的限制。</p>
+<blockquote>
+<p>例如，你可以将本网站内容用于以下方面：</p>
+<ul>
+<li>制作非商业目的的幻灯片；</li>
+<li>制作非商业目的的讲义。</li>
+</ul>
+<p>但是，你不得：</p>
+<ul>
+<li>将内容作为主要内容或大篇幅摘录出版成书籍。</li>
+</ul>
+</blockquote>
+<h2>保密性</h2>
+<p>对于你发送给我们的信件内容，我们将视为“非机密信息”，我们可在本网站隐私政策和法律允许的范围内使用这些信息。</p>
+<p>如果你发送的信息涉及机密，请勿发送。</p>
+<h2>隐私政策</h2>
+<p>请参阅本站隐私政策：</p>
+<blockquote>
+<p>https://knowsex.net/general/privacy-policy</p>
+</blockquote>
+<h2>管辖地限制</h2>
+<p>当你访问本网站时，即视作你主动行事，请遵守当地的法律。如果本网站的全部或部分内容在特定地区禁止阅读，请勿访问本网站或本网站的部分内容。</p>
+<h2>联系我们</h2>
+<p>如果你对本条款有任何疑问，请通过电子邮件联系我们。我们的电子邮件地址为 <code>knowsex@outlook.com</code> 。</p>
+<p>上述信息若有更改，恕不另行通知。</p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-							 <h2>版权</h2>
-		<h3 class="mt-4 mb-3">图片来源</h3>
-		<p>本页图片来自互联网，且均在版权合规要求下使用。</p>
-		<table class="table table-bordered" style="overflow:auto">
-			<tbody>
-				<tr><th>图片编号</th><th>作者</th><th>来源</th></tr>
-				<tr>
-					<td>“扩展阅读”封面</td>
-					<td><a href="https://unsplash.com/@qamran17">Qamran Makhdoomi</a></td>
-					<td><a href="https://unsplash.com/photos/xTjOMYxpsIg">Unsplash</a></td>
-				</tr>
-				<tr>
-					<td>“避孕”封面</td>
-					<td><a href="https://www.rhsupplies.org/">生殖健康用品联盟</a></td>
-					<td><a href="https://unsplash.com/photos/lYR44OXwMA4">Unsplash</a></td>
-				</tr>
-		</tbody>
-		</table>
-	</div>
-				</div>
+									</div>
 			</div>
 		</article>
 		<div>
