--- a/index.html
+++ b/index.html
@@ -169,12 +169,13 @@
 	</nav>
 
 			    <div class="main">
-                <p class="bg-light tip-bar"><span class="darkmode-ignore">😥</span> 因商标纠纷，网站即日起撤去纠纷标识，暂时使用“KnowSex”作为网站名称。</p>
+                <p class="bg-light tip-bar"><span class="darkmode-ignore">ℹ️</span> 2023 年 8 月 3 日（UTC+8）起，我们将实施更新后的<a href="/general/privacy-policy">隐私政策</a>和<a href="/general/terms-of-use">使用条款</a>，请知悉。</p>
+        <!-- <p class="bg-light tip-bar"><span class="darkmode-ignore">😥</span> 因商标纠纷，网站即日起撤去纠纷标识，暂时使用“KnowSex”作为网站名称。</p> -->
         <p class="bg-light tip-bar"><span class="darkmode-ignore">😔</span> 由于<a href="https://post.knowsex.net/archives/trademark-dispute">收到诉讼</a>，目前网站资金出现赤字。如果您觉得网站内容对您有帮助，请考虑<a href="/sub/Encourage.html" style="text-decoration:underline">支持</a>网站的维护与运营。</p>
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-01</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-02</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -273,7 +274,14 @@
 		</article>
 		<div>
 			<p class="px-4 text-center text-muted">
-				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。</p>
+				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。
+			</p>
+				<ul class="list-inline link-underline px-4 text-center text-muted">
+					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
+					<li class="list-inline-item"><a href="/general/privacy-policy">隐私政策</a></li>
+					<li class="list-inline-item"><a href="/general/terms-of-use">使用条款</a></li>
+					<li class="list-inline-item"><a href="/general/about">关于</a></li>
+				</ul>
 		</div>
 
 		<footer class="row footer">
@@ -281,11 +289,7 @@
 				<p class="key">
 					望藉此减少一些社会问题的发生。
 				</p>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-					<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
-					<li class="list-inline-item"><a href="/general/about">关于</a></li>
-				</ul>
+				<p>请考虑<a href="/general/encourage/">支持我们的运作</a>。</p>
 				<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex
 				</p>
 							</div>
