--- a/general/privacy-policy/index.html
+++ b/general/privacy-policy/index.html
@@ -5,12 +5,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,KnowSex,">
-	<meta name="description" content="KnowSex 的扩展阅读部分。">
+	<meta name="keywords" content="隐私政策,性教育,KnowSex,">
+	<meta name="description" content="站点隐私政策">
 
 	<meta property="og:image" content="/style/cover.jpg" />
-	<meta property="og:title" content="扩展阅读" />
-	<meta property="og:description" content="KnowSex 的扩展阅读部分。" />
+	<meta property="og:title" content="隐私政策" />
+	<meta property="og:description" content="站点隐私政策" />
 	<meta property="og:locale" content="zh_CN" />
 	<meta property="og:site_name" content="KnowSex" />
 	<meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/style/logo_144.png" />
 
 	<base target="_blank">
-	<title>扩展阅读 - KnowSex</title>
+	<title>隐私政策 - KnowSex</title>
 	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
 	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -49,7 +49,11 @@
 	</script> -->
 
 	<style>
-					</style>
+		
+.pa-bg {
+background: #fff;
+}
+	</style>
 </head>
 
 <body>
@@ -159,57 +163,117 @@
 		</div>
 	</nav>
 
-			<article itemscope itemtype="http://schema.org/Article">
-			<div class="header-thumb">
-				<div class="header-img ex-rd"></div>
-				<div class="header-cover">
-					<div class="header-title">
-						<h1 itemprop="headline">扩展阅读</h1>
-						<p>Extended Reading</p>
-					</div>
-				</div>
-			</div>
-			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-						<br>
-		<p>在了解了人类生殖系统、性行为和性取向后，可根据您的需要来学习下方已撰写的扩展内容。</p>
-		<br>
-		<div class="header-thumb">
-			<a href="contraception-and-prevention-of-STD.html">
-				<div class="header-img contraceptive"></div>
-				<div class="header-cover">
-					<div class="header-title">
-						<h1>避孕与预防性传播疾病</h1>
-						<p>Contraceptive And Prevention of STD</p>
-					</div>
-				</div>
-			</a>
-		</div>
-		<p>更多内容会按需编写，若您有需要，可在页面底部找到可联系到我们的联系方式。</p>
+				<h1>KnowSex 隐私政策</h1>
+<p>更新日期：2023 年 8 月 2 日</p>
+<p>生效日期：2023 年 8 月 3 日</p>
+<p>考虑到 KnowSex（以下简称“我们”）在本网站提供的服务（以下简称“本服务”）将会处理你的个人信息，我们制订了隐私政策（以下简称“本政策”）如下。</p>
+<p>本服务的域名：</p>
+    <ul>
+        <li>主站点主域名：<code>knowsex.net</code> 及 <code>www.knowsex.net</code>；</li>
+        <li>主站点备用域名：<code>github.knowsex.net</code>；</li>
+        <li>主站点备用域名：<code>knowsex.vercel.app</code>；</li>
+        <li>博客站点域名：<code>post.knowsex.net</code>；</li>
+        <li>站点统计域名：<code>analytics.knowsex.net</code>。</li>
+    </ul>
+
+
+<h2>你的信息的收集和保留</h2>
+<p>有一部分信息是系统自动收集的——当你访问我们的网站时，你的 IP 地址、User-Agent、来源网址和访问路径将从你的设备发送到我们的服务器。这些数据将被服务器软件自动记录在日志文件中。此外，我们使用了自建的服务来统计你的信息。我们将使用这些数据来分析网站的访问情况，以便我们可以改进网站的内容和性能。</p>
+<p>有一部分信息是你主动提供的——当你使用表单功能或电子邮件联系我们时，我们将获取到你主动提供的联系方式。我们将使用这些数据来回复你的问题或提供服务。</p>
+<p>对于存放在我们服务器上的日志数据，我们的维护期限为六个月。</p>
+<p>本服务使用有第三方 CDN 服务，因此自动记录的信息会被发送到 CDN 服务商的服务器。这些服务商包括：</p>
+<ul>
+<li>字节跳动静态资源公共库</li>
+<li>Sina App Engine</li>
+<li>Google Fonts</li>
+<li>jsDelivr</li>
+</ul>
+<p>为方便你联系我们，我们使用金山文档进行表单的处理。如果你选择使用金山文档方式联系我们，你的个人信息会被发送到金山文档。接收者主体为金山文档，你可以通过下面的链接了解你的个人信息处理情况。<strong>如果你不同意金山文档的隐私政策和在线服务协议，你可以改为使用电子邮件的方式联系我们。</strong></p>
+<ul>
+<li><a href="https://www.kdocs.cn/privacy/protect">金山文档隐私政策</a></li>
+<li><a href="https://www.kdocs.cn/privacy/account">金山文档在线服务协议</a></li>
+</ul>
+<p>对于上述第三方的个人信息处理，请参阅对应链接内的隐私政策。</p>
+<h2>收集和使用目的</h2>
+<p>除非法律法规要求，否则我们收集你的信息不会用于以下描述之外的目的。</p>
+<ul>
+<li>分析网站流量；</li>
+<li>改进网站的内容和性能；</li>
+<li>为你提供来信解答服务。</li>
+</ul>
+<h2>第三方披露</h2>
+<p>除上文提到的第三方服务外，其它将你的个人信息披露给第三方的情况有：</p>
+<ul>
+<li>我们征询了你的同意；</li>
+<li>政府或与法律诉讼要求我们披露，我们按照法律要求披露。如果我们收到这样的要求，我们将尽量通知你，除非政府或法律禁止；</li>
+<li>我们认为有必要防止你对自身或他人造成伤害时；</li>
+<li>当我们发生管理层变动，将网站的所有权转让给第三方时；</li>
+<li>当我们的回信者无法通过你在表单渠道留下的联系方式联系你，对你的联系方式作部分遮盖后，公示在“来信沟通”的回信状态异常列表。</li>
+</ul>
+<p>此外的情况，未经你的允许，我们不会将你的信息披露给第三方。</p>
+<p>对于遮盖的联系方式，我们采取以下方式遮盖：</p>
+<ul>
+    <li>使用星号“*”替换遮盖部分，每个星号代表一个原字符；</li>
+    <li>对于邮箱地址的账号部分，只留头尾各两个字符或其中一个字符；</li>
+    <li>对于邮箱地址的域名部分，如果是公用邮箱服务，不遮盖。如果是私人邮箱服务，只留头尾各一个字符或其中一个字符；</li>
+    <li>对于可能造成歧义的情况，例如遮盖后的地址和先前已公示的地址重复，我们将可能遮盖更少字符，但至少遮盖账号部分的 50% 以上。</li>    
+</ul>
+<p>本条款无意阻止您对于第三方披露提出法律抗辩或异议。</p>
+<h2>Cookie</h2>
+<p>本服务不使用 Cookie 。</p>
+<h2>儿童的个人数据</h2>
+<p>我们对儿童的定义是未满 13 周岁或你所在管辖区法律规定的等效年龄的个人。如果你是儿童，你向我们提供的信息应当在监护人的同意之下。</p>
+<table class="table">
+    <thead>
+    <tr>
+    <th style="width:50%">国家或地区</th>
+    <th>儿童年龄定义</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    <td>奥地利、保加利亚、中国大陆、塞浦路斯、以色列、意大利、立陶宛、韩国、西班牙</td>
+    <td>未满 14 周岁</td>
+    </tr>
+    <tr>
+    <td>捷克共和国、法国、希腊、秘鲁、斯洛文尼亚</td>
+    <td>未满 15 周岁</td>
+    </tr>
+    <tr>
+    <td>巴西、克罗地亚、德国、匈牙利、爱尔兰、科索沃、列支敦士登、卢森堡、马来西亚、荷兰、菲律宾、波兰、罗马尼亚、新加坡、斯洛伐克</td>
+    <td>未满 16 周岁</td>
+    </tr>
+    <tr>
+    <td>其它国家或地区</td>
+    <td>未满 13 周岁</td>
+    </tr>
+    </tbody>
+</table>
+    
+<p>对于儿童，如果你要向我们留言，你应当在监护人同意的情况下透露你的个人身份信息，例如你的电子邮件地址。这需要我们验证家长身份。</p>
+<p>如果你是监护人，你可以通过电子邮件联系我们撤销同意并删除有关儿童的个人信息。为此，我们需要验证你的身份。当撤销同意后，我们将停止收集、使用和披露相关信息。</p>
+<h2>信息保护</h2>
+<p>我们会尽力确保你的信息安全，防止泄露、丢失、被盗、伪造和损坏。</p>
+<p>我们为服务器设有访问控制，并针对发现的安全漏洞进行修补。我们对成员有管理要求，个人信息将得到保护。</p>
+<h2>国家或地区间的个人信息传输</h2>
+<p>本服务的主站点主域名和博客站点域名解析所指服务器位于大韩民国。本服务的主站点备用域名解析所指服务器位于美利坚合众国。<strong>如果你访问上述站点时位于其它国家或地区，你的个人信息将被传输到上述国家或地区。</strong></p>
+<p>我们使用 SSL 对你的个人信息进行加密传输，以尽可能保证你的个人信息在传输过程中不被窃取。</p>
+<h2>你的权利</h2>
+<p>你有权要求我们删除你的个人信息，但如果法律要求我们保留你的数据，我们依法律要求执行。你可以通过电子邮件联系我们。</p>
+<h2>数据销毁</h2>
+<p>对于电子数据，将以防止恢复的方式销毁。</p>
+<p>对于打印在纸上的数据，将以焚烧或粉碎方式销毁。</p>
+<h2>联系我们</h2>
+<p>如果你对本政策有任何疑问，请通过电子邮件联系我们。我们的电子邮件地址为 <code>knowsex@outlook.com</code> 。</p>
+<h2>隐私政策的变更</h2>
+<p>我们可能会不时更新本政策。我们将在本页面上发布新的隐私政策，并在生效前通过站内首页横幅通知你。你继续使用本服务即表示你同意本政策的变更。</p>
+<p><a href="https://github.com/knowsex/knowsex.github.io/commits/main/privacy_policy.md">查看更新历史记录</a></p>
 								<a class="btn btn-outline-secondary" href="/" target="_self" role="button">⬅&nbsp;返回主页</a>				<div id="main-end"></div>
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-							 <h2>版权</h2>
-		<h3 class="mt-4 mb-3">图片来源</h3>
-		<p>本页图片来自互联网，且均在版权合规要求下使用。</p>
-		<table class="table table-bordered" style="overflow:auto">
-			<tbody>
-				<tr><th>图片编号</th><th>作者</th><th>来源</th></tr>
-				<tr>
-					<td>“扩展阅读”封面</td>
-					<td><a href="https://unsplash.com/@qamran17">Qamran Makhdoomi</a></td>
-					<td><a href="https://unsplash.com/photos/xTjOMYxpsIg">Unsplash</a></td>
-				</tr>
-				<tr>
-					<td>“避孕”封面</td>
-					<td><a href="https://www.rhsupplies.org/">生殖健康用品联盟</a></td>
-					<td><a href="https://unsplash.com/photos/lYR44OXwMA4">Unsplash</a></td>
-				</tr>
-		</tbody>
-		</table>
-	</div>
-				</div>
+									</div>
 			</div>
 		</article>
 		<div>
