--- a/main/puberty-and-adolescence/index.html
+++ b/main/puberty-and-adolescence/index.html
@@ -170,7 +170,7 @@ background-image: url('source/pa-cover.jpg');
 			<p aria-hidden="true">Contains nudity, click or touch to continue.</p>
 		</div>
 	</div>
-	<div class="seen">		<article itemscope itemtype="http://schema.org/Article">
+	<div class="seen"><article itemscope itemtype="http://schema.org/Article">
 			<div class="header-thumb">
 				<div class="header-img pa-bg"></div>
 				<div class="header-cover">
@@ -401,7 +401,14 @@ background-image: url('source/pa-cover.jpg');
 		</article>
 		<div>
 			<p class="px-4 text-center text-muted">
-				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。</p>
+				本网站所提供的信息仅供教育科普用途。这些信息并非旨在提供专业意见，也不能代替有医疗资质者之意见。如需就诊，请咨询正规医疗机构，以免延误病情。
+			</p>
+				<ul class="list-inline link-underline px-4 text-center text-muted">
+					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
+					<li class="list-inline-item"><a href="/general/privacy-policy">隐私政策</a></li>
+					<li class="list-inline-item"><a href="/general/terms-of-use">使用条款</a></li>
+					<li class="list-inline-item"><a href="/general/about">关于</a></li>
+				</ul>
 		</div>
 
 		<footer class="row footer">
@@ -409,11 +416,7 @@ background-image: url('source/pa-cover.jpg');
 				<p class="key">
 					望藉此减少一些社会问题的发生。
 				</p>
-				<ul class="list-inline">
-					<li class="list-inline-item"><a href="/general/copyright">版权许可</a></li>
-					<li class="list-inline-item"><a href="/general/encourage">支持</a></li>
-					<li class="list-inline-item"><a href="/general/about">关于</a></li>
-				</ul>
+				<p>请考虑<a href="/general/encourage/">支持我们的运作</a>。</p>
 				<p><img loading="lazy" src="/favicon.ico" height="26" alt="KnowSex 标志" aria-hidden="true">&nbsp;KnowSex
 				</p>
 							</div>
