--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -165,7 +165,9 @@
 		<div class="warn">
 			<p class="visually-hidden">如果您正在使用屏幕阅读器，请注意：本页面含有裸露的性器官图片。本页已使用一层模糊处理，您可以不必理会接下来三句提示，继续浏览。</p>
 			<p aria-hidden="true">本页面含有裸露的性器官图片，或不适宜在公众场合展示。轻触或点击以继续。</p>
-			<p aria-hidden="true">Contains nudity, click or touch to continue.</p>
+			<p aria-hidden="true">如果较长时间没有反应，请耐心等待页面载入完成。</p>
+			<p aria-hidden="true" class="mt-5">Contains nudity, click or touch to continue.</p>
+			<p aria-hidden="true">Wait for the page to load and then click.</p>
 		</div>
 	</div>
 	<div class="seen"><article itemscope itemtype="http://schema.org/Article">
