--- a/main/puberty-and-adolescence/index.html
+++ b/main/puberty-and-adolescence/index.html
@@ -167,7 +167,9 @@ background-image: url('source/pa-cover.jpg');
 		<div class="warn">
 			<p class="visually-hidden">如果您正在使用屏幕阅读器，请注意：本页面含有裸露的性器官图片。本页已使用一层模糊处理，您可以不必理会接下来三句提示，继续浏览。</p>
 			<p aria-hidden="true">本页面含有裸露的性器官图片，或不适宜在公众场合展示。轻触或点击以继续。</p>
-			<p aria-hidden="true">Contains nudity, click or touch to continue.</p>
+			<p aria-hidden="true">如果较长时间没有反应，请耐心等待页面载入完成。</p>
+			<p aria-hidden="true" class="mt-5">Contains nudity, click or touch to continue.</p>
+			<p aria-hidden="true">Wait for the page to load and then click.</p>
 		</div>
 	</div>
 	<div class="seen"><article itemscope itemtype="http://schema.org/Article">
@@ -182,7 +184,12 @@ background-image: url('source/pa-cover.jpg');
 			</div>
 			<div style="box-shadow: 5px 0 0 rgba(0, 0, 0, 0.5);"></div>
 			<div class="main">
-				<p><strong>青春期</strong>指人体生殖、生理功能成熟的时期，儿童经由此期成为成人。在这一时期，生长发育较快，身体和心理将发生较大变化。</p>
+				<div class="tip" aria-hidden="true">
+    <p><strong style="color:brown">敬请注意 / NOTICE</strong></p>
+    <p style="font-weight:300">本页面含有裸露的性器官图片，或不适宜在公众场合展示。向下滑动以继续浏览。</p>
+    <p style="font-weight:300" lang="en">Contains nudity. Scroll down to continue.</p>
+</div>
+<p><strong>青春期</strong>指人体生殖、生理功能成熟的时期，儿童经由此期成为成人。在这一时期，生长发育较快，身体和心理将发生较大变化。</p>
 <p>人类经历青春期将获得性别特征和生殖储备能力。人体内外将发生一系列变化，以获得相应的能力。</p>
 <p>平均而言，生理女性大约在 8 - 13 岁开始青春期，生理男性大约在 9 - 14 岁开始青春期，女孩会比男孩更早进入青春期和结束青春期。当然，有些人会比平均年龄更早或更晚进入青春期。</p>
 <p>由于经过青春期，性别将可从生殖器官外观之外做出判断（例如男性的胡须和女性的乳房），因此这些变化也被称为<strong>第二性征</strong>。</p>
