--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 	</nav>
 
 			    <div class="main">
-                <p class="bg-light tip-bar"><span class="darkmode-ignore">ℹ️</span> 2023 年 8 月 3 日（UTC+8）起，我们将实施更新后的<a href="/general/privacy-policy">隐私政策</a>和<a href="/general/terms-of-use">使用条款</a>，请知悉。</p>
+                <p class="bg-light tip-bar"><span class="darkmode-ignore">ℹ️</span> 2023 年 8 月 8 日（UTC+8）起，我们将实施更新后的<a href="/general/privacy-policy">隐私政策</a>，请知悉。</p>
         <!-- <p class="bg-light tip-bar"><span class="darkmode-ignore">😥</span> 因商标纠纷，网站即日起撤去纠纷标识，暂时使用“KnowSex”作为网站名称。</p> -->
         <p class="bg-light tip-bar"><span class="darkmode-ignore">😔</span> 由于<a href="https://post.knowsex.net/archives/trademark-dispute">收到诉讼</a>，目前网站资金出现赤字。如果您觉得网站内容对您有帮助，请考虑<a href="/sub/Encourage.html" style="text-decoration:underline">支持</a>网站的维护与运营。</p>
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-04</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-06</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -396,15 +396,7 @@
 					</footer>
 				<script src="/script/script.js"></script>
 		<script src="/script/domain-check.js"></script>
-		<!-- <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.js" type="application/javascript"></script> -->
-		<script>
-		//Han.init();
-		</script>
-		<!-- Darkmode.js -->
-		<!-- <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/Darkmode.js/1.5.7/darkmode-js.min.js" type="application/javascript"></script> -->
-
-		<script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.9.1/dist/cookieconsent.js"></script>
-		<script>
+				<script>
 			// Dark mode requires
 			function chooseMode(mode) {
 				//用于用户选择颜色主题
