--- a/general/copyright/index.html
+++ b/general/copyright/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,KnowSex,">
+	<meta name="keywords" content="性教育,KnowSex,生理知识,性科普,性知识,青少年性教育,生理健康,生理卫生,性卫生,性教育文章,生殖器插图,生殖器图片,性病,性传播疾病">
 	<meta name="description" content="有关 KnowSex 的版权。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
