--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="性教育,KnowSex,">
+	<meta name="keywords" content="性教育,KnowSex,生理知识,性科普,性知识,青少年性教育,生理健康,生理卫生,性卫生,性教育文章,生殖器插图,生殖器图片,性病,性传播疾病">
 	<meta name="description" content="KnowSex 是一个性教育网站。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
@@ -175,7 +175,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-06</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-07</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
