--- a/sub/extended-reading/contraception-and-prevention-of-STD.html
+++ b/sub/extended-reading/contraception-and-prevention-of-STD.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="keywords" content="避孕,性传播疾病,性教育,KnowSex,">
+	<meta name="keywords" content="避孕,性传播疾病,性教育,KnowSex,生理知识,性科普,性知识,青少年性教育,生理健康,生理卫生,性卫生,性教育文章,生殖器插图,生殖器图片,性病,性传播疾病">
 	<meta name="description" content="关于避孕、预防性传播疾病的介绍。涵盖多种避孕方法的介绍和避孕方法的比较说明。">
 
 	<meta property="og:image" content="/style/cover.jpg" />
