--- a/main/human-reproductive-system/index.html
+++ b/main/human-reproductive-system/index.html
@@ -17,7 +17,6 @@
 
 	<meta name="twitter:site" content="@knowsex_net" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<script src="//lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
 
 	<link rel="apple-touch-icon-precomposed" href="/style/logo_57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/style/logo_114.png" />
@@ -25,29 +24,17 @@
 
 	<base target="_blank">
 	<title>人类生殖系统 - KnowSex</title>
-	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
-	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-	<link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap.min.css" type="text/css"
-		rel="stylesheet" />
-	<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
-		type="application/javascript"></script>
+	<link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+	<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/??jquery/3.1.0/jquery.min.js,bootstrap/5.1.3/js/bootstrap.bundle.min.js" type="application/javascript"></script>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="/style/style.min.css?202308">
 	<script async src="https://analytics.knowsex.net/script.js" data-website-id="74452ede-6372-4bf7-9f03-b9ecbe2f7978"></script>
-	<!-- <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/pangu/4.0.7/pangu.min.js" type="application/javascript"></script>
-	<script>
-		document.addEventListener('DOMContentLoaded', () => {
-			pangu.autoSpacingPage();
-		  });
-	</script> -->
-
+	<link rel="canonical" href="https://knowsex.net/main/human-reproductive-system/"/>
 	<style>
 		/* 20221108 Deleted :not(:...), and strong{700} */
 /*for models*/model-viewer{width:100%;height:60vh;background-color:#fff;border:1px solid #dee2e6;border-radius:.25rem}.progress-bar{display:block;width:33%;height:10%;max-height:2%;position:absolute;left:50%;top:50%;transform:translate3d(-50%,-50%,0);border-radius:25px;box-shadow:0px 3px 10px 3px rgba(0,0,0,0.5),0px 0px 5px 1px rgba(0,0,0,0.6);border:1px solid rgba(255,255,255,0.9);background-color:rgba(0,0,0,0.5)}.progress-bar.hide{visibility:hidden;transition:visibility 0.3s}.update-bar{background-color:rgba(255,255,255,0.9);width:0%;height:100%;border-radius:25px;float:left;transition:width 0.3s}#ar-button{background-image:url(models/ar_icon.png);background-repeat:no-repeat;background-size:20px 20px;background-position:12px 50%;background-color:#fff;position:absolute;left:50%;transform:translateX(-50%);white-space:nowrap;bottom:16px;padding:0px 16px 0px 40px;font-family:Roboto Regular,Helvetica Neue,sans-serif;font-size:14px;color:#4285f4;height:36px;line-height:36px;border-radius:18px;border:1px solid #DADCE0}#ar-button:active{background-color:#E8EAED}#ar-button:focus{outline:none}#ar-button:focus-visible{outline:1px solid #4285f4}@keyframes circle{from{transform:translateX(-50%) rotate(0deg) translateX(50px) rotate(0deg)}to{transform:translateX(-50%) rotate(360deg) translateX(50px) rotate(-360deg)}}@keyframes elongate{from{transform:translateX(100px)}to{transform:translateX(-100px)}}model-viewer > #ar-prompt{position:absolute;left:50%;bottom:60px;animation:elongate 2s infinite ease-in-out alternate;display:none}model-viewer[ar-status="session-started"] > #ar-prompt{display:block}model-viewer > #ar-prompt > img{animation:circle 4s linear infinite}svg.icon{margin-top:-.25em}.model-title{font-weight:700}.model-text{color:grey;font-size:.9em;display:block;margin:.5em 0}
@@ -64,13 +51,6 @@
 ██║  ██╗██║ ╚████║╚██████╔╝╚███╔███╔╝███████║███████╗██╔╝ ██╗██╗██║ ╚████║███████╗   ██║   
 ╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝  ╚══╝╚══╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝╚══════╝   ╚═╝   
 -->
-	<!-- <div class="topbar">
-		<div class="left">
-			
-		  
-		</div>
-	</div> -->
-
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 			<a href="/" target="_self"> 				<span class="title">
@@ -78,7 +58,6 @@
 						style="height: 20px; vertical-align: baseline;">
 				</span>
 			</a>
-
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
