--- a/main/other-media/index.html
+++ b/main/other-media/index.html
@@ -17,7 +17,6 @@
 
 	<meta name="twitter:site" content="@knowsex_net" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<script src="//lib.sinaapp.com/js/jquery/3.1.0/jquery-3.1.0.min.js"></script>
 
 	<link rel="apple-touch-icon-precomposed" href="/style/logo_57.png" />
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/style/logo_114.png" />
@@ -25,29 +24,17 @@
 
 	<base target="_blank">
 	<title>其他媒介版本 - KnowSex</title>
-	<!-- <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Han/3.3.0/han.min.css" type="text/css" rel="stylesheet" /> -->
-	<!-- <link href="//lib.sinaapp.com/js/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<script src="//lib.sinaapp.com/js/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-	<link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap.min.css" type="text/css"
-		rel="stylesheet" />
-	<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
-		type="application/javascript"></script>
+	<link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
+	<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/??jquery/3.1.0/jquery.min.js,bootstrap/5.1.3/js/bootstrap.bundle.min.js" type="application/javascript"></script>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&family=Noto+Serif+SC:wght@400;700&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="/style/style.min.css?202308">
 	<script async src="https://analytics.knowsex.net/script.js" data-website-id="74452ede-6372-4bf7-9f03-b9ecbe2f7978"></script>
-	<!-- <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/pangu/4.0.7/pangu.min.js" type="application/javascript"></script>
-	<script>
-		document.addEventListener('DOMContentLoaded', () => {
-			pangu.autoSpacingPage();
-		  });
-	</script> -->
-
+	<link rel="canonical" href="https://knowsex.net/main/other-media/"/>
 	<style>
 		.other-media {
   background-image: url('cover.jpg');
@@ -65,13 +52,6 @@
 ██║  ██╗██║ ╚████║╚██████╔╝╚███╔███╔╝███████║███████╗██╔╝ ██╗██╗██║ ╚████║███████╗   ██║   
 ╚═╝  ╚═╝╚═╝  ╚═══╝ ╚═════╝  ╚══╝╚══╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝╚══════╝   ╚═╝   
 -->
-	<!-- <div class="topbar">
-		<div class="left">
-			
-		  
-		</div>
-	</div> -->
-
 	<nav class="navbar navbar-expand-lg topbar">
 		<div class="container-fluid">
 			<a href="/" target="_self"> 				<span class="title">
@@ -79,7 +59,6 @@
 						style="height: 20px; vertical-align: baseline;">
 				</span>
 			</a>
-
 
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
