添加 instant.page 。

--- a/main/std/index.html
+++ b/main/std/index.html
@@ -437,6 +437,7 @@
 			}
 			window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', matchSys);
 		</script>
+		<script src="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/instant.page/5.1.0/instantpage.min.js"></script>
 </body>
 
 </html>
