--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-09</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-08-18</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -421,6 +421,7 @@
 			}
 			window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', matchSys);
 		</script>
+		<script src="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/instant.page/5.1.0/instantpage.min.js"></script>
 </body>
 
 </html>
