--- a/sub/extended-reading/contraception-and-prevention-of-STD.html
+++ b/sub/extended-reading/contraception-and-prevention-of-STD.html
@@ -333,6 +333,7 @@ window.location.href = "/sub/Contraception.html";
 			}
 			window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', matchSys);
 		</script>
+		<script src="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/instant.page/5.1.0/instantpage.min.js"></script>
 </body>
 
 </html>
