删去冗杂描述。

--- a/main/sexual-activity/index.html
+++ b/main/sexual-activity/index.html
@@ -181,7 +181,7 @@
 			<li>成为<strong>强迫性冲动</strong>行为造成困扰时 </li>
 		</ul>
 		<p>才被认为是不正常的，<span class="key">大约有 97％ 的男性及 80％ 的女性进行过自慰</span>。<sup id="cite_ref-性行为概述" class="reference"><a href="#cite_note-性行为概述" target="_self" aria-label="佐证资料">[2]</a></sup></p>
-		<p>请注意，自慰行为仅限于在私下场合进行，<span class="key">在公开场合进行自慰不仅违背公德，且在许多国家或地区是违反法律的行为 </span>。<sup><a href="#note" id="light" target="_self">[注]</a></sup></p>
+		<p>请注意，自慰行为仅限于在私下场合进行，<span class="key">在公开场合进行自慰不仅违背公德，且在许多国家或地区是违反法律的行为 </span>。</p>
 		<p>合理的自慰频率有助于身心健康。<sup id="cite_ref-自慰" class="reference"><a href="#cite_note-自慰" target="_self" aria-label="佐证资料">[4]</a></sup>“合理”是指在自身可承受、认为对日常生活不会造成太大影响的频率，该频率因人而异<sup id="cite_ref-20世纪对自我性刺激的认识" class="reference"><a href="#cite_note-20世纪对自我性刺激的认识" target="_self" aria-label="佐证资料">[10]</a></sup>。倘若超出了合理的频率，会造成一些身体不适和健康问题。 </p>
 		<p>一般地，自慰依靠手即可完成。借助性玩具或其他物品等也可增加舒适度，但是使用不当会造成风险。 </p>
 		
@@ -241,9 +241,8 @@
 				<p class="bg-light" style="padding:10px;margin:5px 0;"><span class="darkmode-ignore">⭐</span> 你的 <a
 						href="/general/encourage" style="text-decoration:underline">支持</a> 可以鼓励 KnowSex 的维护与运营。</p>
 				<div class="article-info">
-							 <h2>注释</h2>
-		<p id="note"><a href="#light" target="_self">^</a>注：据<a href="https://flk.npc.gov.cn/detail2.html?MmM5MDlmZGQ2NzhiZjE3OTAxNjc4YmY3NDc4ZTA2OTU">《中华人民共和国治安管理处罚法》</a>第四十四条，“猥亵他人的，或者在公共场所<span class="key">故意裸露身体</span>，情节恶劣的，处五日以上十日以下拘留”。</p>
-		 <h2 class="reference">参考资料</h2>
+							
+		<h2 class="reference">参考资料</h2>
 		<ol class="reference-list"> 
 			<li id="cite_note-性交"><span class="mw-cite-backlink"><b><a href="#cite_ref-性交" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">维基百科编者. 性交[G/OL]. 维基百科, 2022(20220509)[2022-05-09].&nbsp;<a href="https://zh.wikipedia.org/w/index.php?title=%E6%80%A7%E4%BA%A4&oldid=71552985">https://zh.wikipedia.org/w/index.php?title=%E6%80%A7%E4%BA%A4&oldid=71552985</a></span></li>
 <li id="cite_note-性行为概述"><span class="mw-cite-backlink"><b><a href="#cite_ref-性行为概述" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">George R. Brown. 性行为概述[G/OL]. 默沙东诊疗手册医学专业人士版, 2019(201907)[2019-07].&nbsp;<a href="https://www.msdmanuals.cn/professional/psychiatric-disorders/gender-dysphoria/overview-of-sexual-behavior">https://www.msdmanuals.cn/professional/psychiatric-disorders/gender-dysphoria/overview-of-sexual-behavior</a></span></li>
