--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-09-10</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-09-11</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
@@ -373,7 +373,12 @@
 									</p>
 			</div>
 					</footer>
-				<script src="/script/script.js"></script>
+		<script>
+if (window.location.search) {
+    history.replaceState({}, document.title, window.location.pathname);
+}
+</script>
+		<script src="/script/script.js"></script>
 		<script src="/script/domain-check.js"></script>
 				<script>
 			// Dark mode requires
