根据BMJ的文献修改PEP时间。

--- a/main/std/aids/index.html
+++ b/main/std/aids/index.html
@@ -179,10 +179,10 @@
 <h2>预防</h2>
 <p>在性行为时正确使用安全套、不与他人共用针具可预防 HIV 感染。对于 HIV 感染高风险人群，可考虑到医疗机构采取暴露前预防（ PrEP ）。<sup id="cite_ref-诊疗指南" class="reference"><a href="#cite_note-诊疗指南" target="_self" aria-label="佐证资料">[2]</a></sup><sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[3]</a></sup></p>
 <h2>预后</h2>
-<p>接触 HIV 后的 72 小时内尽快采取暴露后预防（ PEP ）措施可大大降低感染风险。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[3]</a></sup></p>
+<p>接触 HIV 后尽快采取暴露后预防（ PEP ）措施可大大降低感染风险，理想的时间是接触后的 2 小时内，一般不要超过 72 小时。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[3]</a></sup><sup id="cite_ref-bmj" class="reference"><a href="#cite_note-bmj" target="_self" aria-label="佐证资料">[4]</a></sup></p>
 <p>艾滋病尚无治愈方法，但有药物可控制 HIV 并预防并发症。<sup id="cite_ref-Mayo" class="reference"><a href="#cite_note-Mayo" target="_self" aria-label="佐证资料">[3]</a></sup>建议在确诊后，即时到正规医疗机构就诊治疗。</p>
 <h2>社会文化</h2>
-<p>为提高对 AIDS 和 HIV 的认识、团结世界各地人民面对 AIDS，世界卫生组织定每年 12 月 1 日为世界艾滋病日。<sup id="cite_ref-世界艾滋病日" class="reference"><a href="#cite_note-世界艾滋病日" target="_self" aria-label="佐证资料">[4]</a></sup></p>
+<p>为提高对 AIDS 和 HIV 的认识、团结世界各地人民面对 AIDS，世界卫生组织定每年 12 月 1 日为世界艾滋病日。<sup id="cite_ref-世界艾滋病日" class="reference"><a href="#cite_note-世界艾滋病日" target="_self" aria-label="佐证资料">[5]</a></sup></p>
 <p>红丝带是艾滋病的标志，象征着对艾滋病感染者的接纳和关怀。</p>
 <div class="notice bg-light">
   <p>
@@ -201,10 +201,11 @@
 				<div class="article-info">
 					<h2 class="reference">参考资料</h2>
 <ol class="reference-list">
-  <li id="cite_note-诊断"><span class="mw-cite-backlink"><b><a href="#cite_ref-诊断" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华人民共和国国家卫生健康委员会. WS 293-2019 艾滋病和艾滋病病毒感染诊断[S/OL]. 未知出版地:中华人民共和国国家卫生健康委员会, 2019.&nbsp;<a href="http://www.nhc.gov.cn/wjw/s9491/201905/6430aa653728439c901a7340796e4723.shtml">http://www.nhc.gov.cn/wjw/s9491/201905/6430aa653728439c901a7340796e4723.shtml</a></span></li>
-<li id="cite_note-诊疗指南"><span class="mw-cite-backlink"><b><a href="#cite_ref-诊疗指南" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华医学会感染病学分会艾滋病丙型肝炎学组，中国疾病预防控制中心. 中国艾滋病诊疗指南(2021年版)[J/OL]. 协和医学杂志, 2022, 13(2): 203-226. doi: 10.12290/xhyxzz.2022-0097.&nbsp;<a href="https://xhyxzz.pumch.cn/cn/article/doi/10.12290/xhyxzz.2022-0097?viewType=HTML">https://xhyxzz.pumch.cn/cn/article/doi/10.12290/xhyxzz.2022-0097?viewType=HTML</a></span></li>
-<li id="cite_note-Mayo"><span class="mw-cite-backlink"><b><a href="#cite_ref-Mayo" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">妙佑医疗国际员工. HIV/AIDS[G/OL]. 妙佑医疗国际, 2022(20221228)[2023-05-13].&nbsp;<a href="https://www.mayoclinic.org/zh-hans/diseases-conditions/hiv-aids/symptoms-causes/syc-20373524">https://www.mayoclinic.org/zh-hans/diseases-conditions/hiv-aids/symptoms-causes/syc-20373524</a></span></li>
-<li id="cite_note-世界艾滋病日"><span class="mw-cite-backlink"><b><a href="#cite_ref-世界艾滋病日" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">世界卫生组织. 世界艾滋病日[EB/OL]. 世界卫生组织, [2023-05-13].&nbsp;<a href="https://www.who.int/zh/campaigns/world-aids-day">https://www.who.int/zh/campaigns/world-aids-day</a></span></li>
+  <li id="cite_note-诊断"><span class="mw-cite-backlink"><b><a href="#cite_ref-诊断" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华人民共和国国家卫生健康委员会. WS 293-2019 艾滋病和艾滋病病毒感染诊断. 未知出版地:中华人民共和国国家卫生健康委员会, 2019.&nbsp;<a href="http://www.nhc.gov.cn/wjw/s9491/201905/6430aa653728439c901a7340796e4723.shtml">http://www.nhc.gov.cn/wjw/s9491/201905/6430aa653728439c901a7340796e4723.shtml</a></span></li>
+<li id="cite_note-诊疗指南"><span class="mw-cite-backlink"><b><a href="#cite_ref-诊疗指南" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">中华医学会感染病学分会艾滋病丙型肝炎学组，中国疾病预防控制中心. 中国艾滋病诊疗指南(2021年版). 协和医学杂志, 2022, 13(2): 203-226. doi: 10.12290/xhyxzz.2022-0097.&nbsp;<a href="https://xhyxzz.pumch.cn/cn/article/doi/10.12290/xhyxzz.2022-0097?viewType=HTML">https://xhyxzz.pumch.cn/cn/article/doi/10.12290/xhyxzz.2022-0097?viewType=HTML</a></span></li>
+<li id="cite_note-Mayo"><span class="mw-cite-backlink"><b><a href="#cite_ref-Mayo" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">妙佑医疗国际员工. HIV/AIDS. 妙佑医疗国际, 2022(20221228)[2023-05-13].&nbsp;<a href="https://www.mayoclinic.org/zh-hans/diseases-conditions/hiv-aids/symptoms-causes/syc-20373524">https://www.mayoclinic.org/zh-hans/diseases-conditions/hiv-aids/symptoms-causes/syc-20373524</a></span></li>
+<li id="cite_note-bmj"><span class="mw-cite-backlink"><b><a href="#cite_ref-bmj" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">Ming Jie Lee, Julie Fox. HIV 暴露后预防. BMJ Best Practice, 2022-07-15[2023-09-17].&nbsp;<a href="https://bestpractice.bmj.com/topics/zh-cn/1109">https://bestpractice.bmj.com/topics/zh-cn/1109</a></span></li>
+<li id="cite_note-世界艾滋病日"><span class="mw-cite-backlink"><b><a href="#cite_ref-世界艾滋病日" aria-label="跳转" title="跳转" target="_self">^</a></b></span><span class="reference-text">世界卫生组织. 世界艾滋病日. 世界卫生组织, [2023-05-13].&nbsp;<a href="https://www.who.int/zh/campaigns/world-aids-day">https://www.who.int/zh/campaigns/world-aids-day</a></span></li>
 
 </ol>
 <h2>版权</h2>
