隐私政策扩充有关博客站点的头像问题。

--- a/general/privacy-policy/index.html
+++ b/general/privacy-policy/index.html
@@ -145,23 +145,24 @@ background: #fff;
 
 			<div class="main">
 				<h1>KnowSex 隐私政策</h1>
-<p>更新日期：2023 年 8 月 6 日</p>
-<p>生效日期：2023 年 8 月 8 日</p>
+<p>更新日期：2023 年 10 月 4 日</p>
+<p>生效日期：2023 年 10 月 6 日</p>
 <p>考虑到 KnowSex（以下简称“我们”）在本网站提供的服务（以下简称“本服务”）将会处理你的个人信息，我们制订了隐私政策（以下简称“本政策”）如下。</p>
 <p>本服务的域名：</p>
     <ul>
-        <li>主站点主域名：<code>knowsex.net</code> 及 <code>www.knowsex.net</code>；</li>
+        <li>主站点主域名（“<strong>主站点</strong>”）：<code>knowsex.net</code> 及 <code>www.knowsex.net</code>；</li>
         <li>主站点备用域名：<code>github.knowsex.net</code>；</li>
         <li>主站点备用域名：<code>knowsex.vercel.app</code>；</li>
-        <li>博客站点域名：<code>post.knowsex.net</code>；</li>
+        <li>博客站点域名（“<strong>博客站点</strong>”）：<code>post.knowsex.net</code>；</li>
         <li>站点统计域名：<code>analytics.knowsex.net</code>。</li>
     </ul>
 
 
 <h2>你的信息的收集和保留</h2>
 <p>有一部分信息是系统自动收集的——当你访问我们的网站时，你的 IP 地址、User-Agent、来源网址和访问路径将从你的设备发送到我们的服务器。这些数据将被服务器软件自动记录在日志文件中。此外，我们使用了自建的服务来统计你的信息。我们将使用这些数据来分析网站的访问情况，以便我们可以改进网站的内容和性能。</p>
-<p>有一部分信息是你主动提供的——当你使用表单功能或电子邮件联系我们时，我们将获取到你主动提供的联系方式。我们将使用这些数据来回复你的问题或提供服务；当你通过指定渠道为我们提供资金支持，你的付款时间、金额、留言内容、你留下的名字和渠道将被记录。我们将出于资金透明的目的使用这些数据来统计、公示资金详单。同时，这些支付渠道也将记录你的个人信息，详情请参阅你选择的支付方式的服务提供商。</p>
+<p>有一部分信息是你主动提供的——当你使用表单功能或电子邮件联系我们时，以及你通过博客站点向我们留言时提供了你的名字、邮箱和网站地址，我们将获取到你主动提供的联系方式。我们将使用这些数据来回复你的问题或提供服务；当你通过指定渠道为我们提供资金支持，你的付款时间、金额、留言内容、你留下的名字和渠道将被记录。我们将出于资金透明的目的使用这些数据来统计、公示资金详单。同时，这些支付渠道也将记录你的个人信息，详情请参阅你选择的支付方式的服务提供商。</p>
 <p>对于存放在我们服务器上的日志数据，我们的维护期限为六个月。</p>
+<p>对于你在博客站点留言时提供的个人信息，我们将予以保留，直到你要求我们删除为止。</p>
 <p>本服务使用有第三方 CDN 服务，因此自动记录的信息会被发送到 CDN 服务商的服务器。这些服务商包括：</p>
 <ul>
 <li>字节跳动静态资源公共库</li>
@@ -173,6 +174,10 @@ background: #fff;
 <ul>
 <li><a href="https://www.kdocs.cn/privacy/protect">金山文档隐私政策</a></li>
 <li><a href="https://www.kdocs.cn/privacy/account">金山文档在线服务协议</a></li>
+</ul>
+<p>在博客站点的留言，在对来访者展示时，你的邮箱地址将被发送到头像提供商 Gravatar 以查询是否预留有头像图片。你可以通过下面的链接了解你的个人信息处理情况。</p>
+<ul>
+    <li><a href="https://automattic.com/privacy/">Privacy Policy – Automattic</a></li>
 </ul>
 <p>对于上述第三方的个人信息处理，请参阅对应链接内的隐私政策。</p>
 <h2>收集和使用目的</h2>
