--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
 	</nav>
 
 			    <div class="main">
-                        <!-- <p class="bg-light tip-bar"><span class="darkmode-ignore">😥</span> 因商标纠纷，网站即日起撤去纠纷标识，暂时使用“KnowSex”作为网站名称。</p> -->
+                <p class="bg-light tip-bar"><span class="darkmode-ignore">ℹ️</span> 2023 年 10 月 6 日（UTC+8）起，我们将实施更新后的<a href="/general/privacy-policy">隐私政策</a>，请知悉。</p>
+        
+        <!-- <p class="bg-light tip-bar"><span class="darkmode-ignore">😥</span> 因商标纠纷，网站即日起撤去纠纷标识，暂时使用“KnowSex”作为网站名称。</p> -->
         <p class="bg-light tip-bar"><span class="darkmode-ignore">😔</span> 由于<a href="https://post.knowsex.net/archives/trademark-dispute">收到诉讼</a>，目前网站资金出现赤字。如果您觉得网站内容对您有帮助，请考虑<a href="/sub/Encourage.html" style="text-decoration:underline">支持</a>网站的维护与运营。</p>
         <p class="bg-light tip-bar" style="text-align: left;">
             <span class="darkmode-ignore">🔖</span> 请收藏我们的网址 <code>knowsex.net</code> 以备不时之需。<a href="https://post.knowsex.net/archives/how-to-visit-again">了解如何再度访问...</a>
@@ -157,7 +159,7 @@
         <div id="domain-notice"></div>
         <div class="browser_tip"></div>
         <br>
-        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-09-17</div>
+        <div style="color:grey; font-size:.8em;">当前版本修缮日期 2023-10-04</div>
 
         <div class="header-thumb">
   <a href="main/human-reproductive-system">
