完善用户协议内容；撤下主页横幅。

--- a/general/terms-of-use/index.html
+++ b/general/terms-of-use/index.html
@@ -145,8 +145,8 @@
 
 			<div class="main">
 				<h1>KnowSex 使用条款</h1>
-<p>更新日期：2023 年 8 月 2 日</p>
-<p>生效日期：2023 年 8 月 3 日</p>
+<p>更新日期：2023 年 10 月 12 日</p>
+<p>生效日期：2023 年 10 月 13 日</p>
 <h2>范围</h2>
 <p>KnowSex 使用条款（以下简称“本条款”）适用于 KnowSex（以下简称“我们”）的如下站点（以下简称“本网站”）：</p>
 <ul>
@@ -165,7 +165,8 @@
 <p><strong>我们不承担任何因使用本网站而产生的直接或间接的责任。</strong></p>
 <p>在你使用本网站连接到的第三方服务时，你应知晓使用这些服务产生的一切后果与本网站无关。</p>
 <p><strong>当你通过联系本网站获得本网站的成员为你提供的资讯时，你应知晓我们提供的内容不能被解读为试图给予或提供特定医疗意见，或属于医疗临床实务的一部分，不能取代医护专业人士的建议和药品说明书。</strong></p>
-<p>回信者可能会出于你的情况对你做出特定性的回复，对于你提出的任何问题，回信者的观点并不代表我们的观点。</p>
+<p>对于你提出的任何问题，回信者的观点并不代表我们的观点。</p>
+<p>本网站中所使用的名称和材料的表述并不意味着我们对任何国家、领土、城市或地区或其当局的法律地位或其边界划定表达任何意见。</p>
 <h2>内容版权</h2>
 <p>对于本网站内容的版权，请参阅本站版权许可：</p>
 <blockquote>
